--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "reselect": "^4.0.0"
   },
   "devDependencies": {
-    "@types/jest": "24.0.18",
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "cypress": "^3.4.1",
+    "cypress-skip-and-only-ui": "^1.2.4",
+    "cypress-watch-and-reload": "^1.2.11",
     "react-scripts": "3.2.0",
+    "start-server-and-test": "^1.10.4",
     "typescript": "3.6.3"
   },
   "scripts": {
+    "cy:open": "cypress open --config baseUrl=http://localhost:3000",
+    "cy:run": "cypress run --config baseUrl=http://localhost:3000",
+    "dev": "start-test 3000 cy:open",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "start-test 3000 cy:run",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
