--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
+    "@types/react-redux": "^7.1.4",
     "cypress": "^3.4.1",
     "cypress-skip-and-only-ui": "^1.2.4",
     "cypress-watch-and-reload": "^1.2.11",
