Refactoring and add missing types

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "npm.packageManager": "yarn",
     "cSpell.words": [
         "antialiased",
-        "browserslist"
+        "browserslist",
+        "devtools"
     ]
 }
