--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.1.1",
-    "reselect": "^4.0.0"
+    "redux-saga": "^1.1.1"
   },
   "devDependencies": {
     "@types/node": "12.7.11",
