Add scripts description

--- a/package.json
+++ b/package.json
@@ -1,4 +1,27 @@
 {
+  "//": [
+    "********************************************************************",
+    "scripts:",
+    "--------------------------------------------------------------------",
+    "start development environment with cypress UI:",
+    "> yarn dev",
+    "--------------------------------------------------------------------",
+    "start development environment without tests:",
+    "> yarn start",
+    "--------------------------------------------------------------------",
+    "start development environment and run tests with headless cypress:",
+    "> yarn test",
+    "--------------------------------------------------------------------",
+    "make production build:",
+    "> yarn build",
+    "--------------------------------------------------------------------",
+    "open cypress UI:",
+    "> yarn cy:open",
+    "--------------------------------------------------------------------",
+    "run tests with headless cypress:",
+    "> yarn cy:run",
+    "********************************************************************"
+  ],
   "name": "x-rates",
   "version": "0.1.0",
   "private": true,
