--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "name": "x-rates",
   "version": "0.1.0",
   "private": true,
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.10.2",
