--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "make production build:",
     "> yarn build",
     "--------------------------------------------------------------------",
+    "make release version:",
+    "> yarn release",
+    "--------------------------------------------------------------------",
     "open cypress UI:",
     "> yarn cy:open",
     "--------------------------------------------------------------------",
     "run tests with headless cypress:",
     "> yarn cy:run",
+    "--------------------------------------------------------------------",
+    "commit message wizard:",
+    "> yarn commit",
     "********************************************************************"
   ],
   "name": "x-rates",
@@ -36,14 +42,19 @@
     "redux-saga": "^1.1.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@types/node": "12.7.11",
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "@types/react-redux": "^7.1.4",
+    "commitizen": "^4.0.3",
     "cypress": "^3.4.1",
     "cypress-skip-and-only-ui": "^1.2.4",
     "cypress-watch-and-reload": "^1.2.11",
+    "husky": "^3.0.8",
     "react-scripts": "3.2.0",
+    "standard-version": "^7.0.0",
     "start-server-and-test": "^1.10.4",
     "typescript": "3.6.3"
   },
@@ -53,8 +64,20 @@
     "dev": "start-test 3000 cy:open",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "release": "standard-version",
     "test": "start-test 3000 cy:run",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "commit": "git-cz"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
