feat(ui): add material-ui library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
     "cSpell.words": [
         "antialiased",
         "browserslist",
+        "clsx",
         "commitlint",
-        "devtools"
+        "devtools",
+        "unmount"
     ]
 }
