--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "private": true,
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
+    "@material-ui/core": "^4.5.1",
     "axios": "^0.19.0",
+    "clsx": "^1.0.4",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
