--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@types/react": "16.9.5",
     "@types/react-dom": "16.9.1",
     "@types/react-redux": "^7.1.4",
+    "@types/webpack-env": "^1.14.0",
     "commitizen": "^4.0.3",
     "cypress": "^3.4.1",
     "cypress-skip-and-only-ui": "^1.2.4",
