--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@material-ui/core": "^4.5.1",
+    "@types/moment": "^2.13.0",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
+    "moment": "^2.24.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
